<?xml version="1.0"?>
<package>
  <name>r2_control</name>
  <version>0.0.0</version>
  <description>The r2_control package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <maintainer email="stephen.hart@nasa.gov">Stephen Hart</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/r2_control</url> -->

  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
