<?xml version="1.0"?>
<package>
  <name>r2_dynamic_reconfigure</name>
  <version>0.1.2</version>
  <description>The r2_dynamic_reconfigure package</description>
  <maintainer email="davidvlu@gmail.com">David Lu!!</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/r2_dynamic_reconfigure</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>
