<?xml version="1.0"?>
<package>
  <name>r2_teleop</name>
  <version>0.1.3</version>
  <description>The r2_teleop package</description>
  <maintainer email="davidvlu@gmail.com">David Lu!!</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/r2_teleop</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>r2_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>r2_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
